ollama/open-webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ollama-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      # $ oc adm policy add-scc-to-user anyuid -z open-webui
      # $ oc adm policy add-scc-to-user anyuid -z open-webui
      serviceAccountName: open-webui
      containers:
        - name: open-webui
          image: quay.local.momolab.io/mirror/ollama-chat/open-webui:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: open-webui-data
              mountPath: /app/backend/data
      volumes:
        - name: open-webui-data
          persistentVolumeClaim:
            claimName: open-webui-data
